--- a/stackhawk.yml
+++ b/stackhawk.yml
@@ -1,4 +1,6 @@
 app:
+  applicationId: ${APP_ID:dacc7d3e-babc-47d2-b040-ab117ab04526}
+  env: ${APP_ENV:dev}
   host: ${APP_HOST:http://localhost:3000}
   scanType: ${SCAN_TYPE:api-scan}
   scanLevelConf: ${SCAN_LEVEL_CONF:}
