--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -18,3 +18,9 @@ jobs:
           node-version: 14.x
       - name: Install dependencies
         run: npm clean-install
+      - name: Daemonize our Node API service
+        run: nohup npm run start &
+      - name: Run HawkScan
+        uses: stackhawk/hawkscan-action@v1.3.1
+        with: 
+          apiKey: ${{ secrets.HAWK_API_KEY }}
