--- a/.github/workflows/run-hawkscan-test.yml
+++ b/.github/workflows/run-hawkscan-test.yml
@@ -30,4 +30,6 @@ jobs:
       - name: Run CLI Scan
         env:
           APP_ID: ${{ secrets.HAWK_APP_ID }}
+          COMMIT_SHA: ${{ github.event.pull_request.head.sha || env.GITHUB_SHA }}
+          BRANCH_NAME: ${{ env.GITHUB_HEAD_REF || env.GITHUB_REF_NAME }}
         run: hawk ${{ secrets.HAWK_TEST_OPTIONS }} --api-key=${{ secrets.HAWK_API_KEY }} scan
