--- a/.github/workflows/run-hawkscan-pr.yml
+++ b/.github/workflows/run-hawkscan-pr.yml
@@ -1,8 +1,5 @@
 name: Build, Test, Scan
 on:
-  push: 
-    branches:
-      - main
   pull_request:
 jobs:
   build-and-test:
@@ -30,6 +27,6 @@ jobs:
       - name: Run CLI Scan
         env:
           APP_ID: ${{ secrets.HAWK_APP_ID }}
-          COMMIT_SHA: ${{ github.event.pull_request.head.sha != '' && github.event.pull_request.head.sha || env.GITHUB_SHA }}
-          BRANCH_NAME: ${{ env.GITHUB_HEAD_REF != '' && env.GITHUB_HEAD_REF || env.GITHUB_REF_NAME }}
+          COMMIT_SHA: ${{ github.event.pull_request.head.sha }}
+          BRANCH_NAME: ${{ env.GITHUB_HEAD_REF }}
         run: hawk ${{ secrets.HAWK_TEST_OPTIONS }} --api-key=${{ secrets.HAWK_API_KEY }} scan
