--- a/.github/workflows/run-hawkscan-push.yaml
+++ b/.github/workflows/run-hawkscan-push.yaml
@@ -29,6 +29,6 @@ jobs:
       - name: Run CLI Scan
         env:
           APP_ID: ${{ secrets.HAWK_APP_ID }}
-          COMMIT_SHA: ${{ env.GITHUB_SHA }}
-          BRANCH_NAME: ${{ env.GITHUB_REF_NAME }}
+          COMMIT_SHA: ${{ github.sha }}
+          BRANCH_NAME: ${{ github.head_ref }}
         run: hawk ${{ secrets.HAWK_TEST_OPTIONS }} --api-key=${{ secrets.HAWK_API_KEY }} scan
