--- a/stackhawk.yml
+++ b/stackhawk.yml
@@ -5,6 +5,7 @@ app:
   # -- The environment for the applicationId defined in the StackHawk platform. --
   env: Development # (required)
   # -- The url of your application to scan --
+  # -- Run the app local to the build for faster results --
   host: http://localhost:3000 # (required)
 tags:
   - name: _STACKHAWK_GIT_COMMIT_SHA
