--- a/.github/workflows/run-hawkscan-pr.yml
+++ b/.github/workflows/run-hawkscan-pr.yml
@@ -26,7 +26,7 @@ jobs:
           installCLIOnly: true
       - name: Run CLI Scan
         env:
-          APP_ID: ${{ secrets.HAWK_APP_ID }}
+          APP_ID: ${{ secrets.HAWK_APP_ID_PROD }}
           COMMIT_SHA: ${{ github.event.pull_request.head.sha }}
           BRANCH_NAME: ${{ env.GITHUB_HEAD_REF }}
-        run: hawk ${{ secrets.HAWK_TEST_OPTIONS }} --api-key=${{ secrets.HAWK_API_KEY }} scan
+        run: hawk --api-key=${{ secrets.HAWK_API_KEY_PROD }} scan
