--- a/.github/workflows/run-hawkscan-push.yaml
+++ b/.github/workflows/run-hawkscan-push.yaml
@@ -28,7 +28,7 @@ jobs:
           installCLIOnly: true
       - name: Run CLI Scan
         env:
-          APP_ID: ${{ secrets.HAWK_APP_ID }}
+          APP_ID: ${{ secrets.HAWK_APP_ID_PROD }}
           COMMIT_SHA: ${{ github.sha }}
           BRANCH_NAME: ${{ github.head_ref }}
-        run: hawk ${{ secrets.HAWK_TEST_OPTIONS }} --api-key=${{ secrets.HAWK_API_KEY }} scan
+        run: hawk --api-key=${{ secrets.HAWK_API_KEY_PROD }} scan
