--- a/.github/workflows/run-hawkscan-pr.yml
+++ b/.github/workflows/run-hawkscan-pr.yml
@@ -1,32 +1,29 @@
-name: Build, Test, Scan
-on:
-  pull_request:
-jobs:
-  build-and-test:
-    name: Build and test
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Install Node.js 14.x
-        uses: actions/setup-node@v3
-        with:
-          node-version: 14
-          cache: npm
-      - name: Install dependencies
-        run: npm install
-      # Comment out the tests for speed.
-      #- name: Run unit tests
-      #  run: npm test
-      - name: Daemonize our Node API service
-        run: npm run start &
-      - name: Install Hawk CLI
-        uses: stackhawk/hawkscan-action@v2.0.0
-        with:
-          installCLIOnly: true
-      - name: Run CLI Scan
-        env:
-          APP_ID: ${{ secrets.HAWK_APP_ID_PROD }}
-          COMMIT_SHA: ${{ github.event.pull_request.head.sha }}
-          BRANCH_NAME: ${{ env.GITHUB_HEAD_REF }}
-        run: hawk --api-key=${{ secrets.HAWK_API_KEY_PROD }} scan
+#name: Build, Test, Scan
+#on:
+#  pull_request:
+#jobs:
+#  build-and-test:
+#    name: Build and test
+#    runs-on: ubuntu-20.04
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v3
+#      - name: Install Node.js 14.x
+#        uses: actions/setup-node@v3
+#        with:
+#          node-version: 14
+#          cache: npm
+#      - name: Install dependencies
+#        run: npm install
+#      - name: Daemonize our Node API service
+#        run: npm run start &
+#      - name: Install Hawk CLI
+#        uses: stackhawk/hawkscan-action@v2.0.0
+#        with:
+#          installCLIOnly: true
+#      - name: Run CLI Scan
+#        env:
+#          APP_ID: ${{ secrets.HAWK_APP_ID_PROD }}
+#          COMMIT_SHA: ${{ github.event.pull_request.head.sha }}
+#          BRANCH_NAME: ${{ env.GITHUB_HEAD_REF }}
+#        run: hawk --api-key=${{ secrets.HAWK_API_KEY_PROD }} scan
