--- a/.github/workflows/hawkscan.yml
+++ b/.github/workflows/hawkscan.yml
@@ -9,6 +9,9 @@ jobs:
   build-and-test:
     name: Build and Scan
     runs-on: ubuntu-20.04
+    env:
+      COMMIT_SHA: ${{ github.event.pull_request.head.sha }}
+      BRANCH_NAME: ${{ github.head_ref }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -23,10 +26,9 @@ jobs:
         run: npm test
       - name: Daemonize our Node API service
         run: npm run start &
+      - name: Env Dump
+        run: env
       - name: Run HawkScan
-        env:
-          COMMIT_SHA: ${{ github.event.pull_request.head.sha }}
-          BRANCH_NAME: ${{ github.head_ref }}
         uses: stackhawk/hawkscan-action@v2.0.0
         with:
           apiKey: ${{ secrets.HAWK_API_KEY }}
