--- a/.github/workflows/hawkscan.yml
+++ b/.github/workflows/hawkscan.yml
@@ -30,5 +30,6 @@ jobs:
         run: env
       - name: Run HawkScan
         uses: stackhawk/hawkscan-action@v2.0.0
+        continue-on-error: true
         with:
           apiKey: ${{ secrets.HAWK_API_KEY }}
