--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,9 +33,9 @@ jobs:
             echo 'export PATH="${HAWK_VERSION}/hawk:${PATH}"' >> "$BASH_ENV"
       - run: curl -v https://download.stackhawk.com/hawk/cli/hawk-"${HAWK_VERSION}".zip -o hawk.zip
       - run: unzip hawk.zip
-      - node/install-packages:
-          # If you are using yarn, change the line below from "npm" to "yarn"
-          pkg-manager: npm
+#       - node/install-packages:
+#           # If you are using yarn, change the line below from "npm" to "yarn"
+#           pkg-manager: npm
       - run: npm install
       # - run:
       #     name: Run tests
