--- a/stackhawk.yml
+++ b/stackhawk.yml
@@ -6,3 +6,8 @@ app:
     path: /
     pollDelay: 1000
     waitTimeoutMillis: 300000
+tags:
+  - name: _STACKHAWK_GIT_COMMIT_SHA
+    value: ${CIRCLE_SHA1}
+  - name: _STACKHAWK_GIT_BRANCH
+    value: ${CIRCLE_BRANCH}
