Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -26,7 +26,7 @@ pool:
 steps:
   - bash: |
       cd /home/dan/projects/vuln_node_express
-      docker-compose up --build --detach
+      docker run --rm --publish 3000:3000 --detach --name nodeexpressvulny stackhawk/nodeexpressvulny
   - task: HawkScanInstall@1
     inputs:
       version: latest
