--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,6 +27,7 @@ pool:
 steps:
   - powershell: |
       cd C:\Users\Dan\projects\vuln_node_express
+      $Env:PATH = "C:\Program Files\Docker\Docker\resources\bin;$Env:PATH"
       docker run --rm --publish 3000:3000 --detach --name nodeexpressvulny stackhawk/nodeexpressvulny
   - task: HawkScanInstall@1
     inputs:
