--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,4 @@
+#Example configuration below for a machine executor workflow within CircleCI; see https://docs.stackhawk.com/continuous-integration/circleci.html
 version: 2.1
 orbs:
   node: circleci/node@4.7
