--- a/stackhawk.yml
+++ b/stackhawk.yml
@@ -1,5 +1,5 @@
 app:
-  applicationId: ${APP_ID:dacc7d3e-babc-47d2-b040-ab117ab04526}
+  applicationId: ${APP_ID}
   env: Development
   host: http://localhost:3000
   #see below for scanner retry behavior(optional); this allows the application to fully deploy before the scan starts
