--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -21,3 +21,12 @@ jobs:
         run: npm install
       - name: Run unit tests
         run: npm test
+
+          ### NEW STEPS BELOW! ###
+        
+      - name: Daemonize our Node API service
+        run: npm run start &
+      - name: Run HawkScan
+        uses: stackhawk/hawkscan-action@v2.0.0
+        with:
+          apiKey: ${{ secrets.HAWK_API_KEY }}
