--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -18,7 +18,7 @@ jobs:
            node-version: 14
  #          cache: npm #
       - name: Install dependencies
-        run: npm install npx
+        run: npm install
       - name: Run unit tests
         run: npm test
 
