--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v3
         with:
            node-version: 14
- #          cache: npm #
+           cache: npm
       - name: Install dependencies
         run: npm install
       - name: Run unit tests
