--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -3,20 +3,20 @@ name: Build and Test
 on:
   push: 
     branches:
-        - main
+      - main
   pull_request:
 jobs:
   build-and-test:
-    name: build and test
+    name: Build and test
     runs-on: ubuntu-20.04
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v3
       - name: Install Node.js 14.x
-        uses: actions/checkout@v3
+        uses: actions/setup-node@v3
         with:
-           node-version: 14
-           cache: npm
+          node-version: 14
+          cache: npm
       - name: Install dependencies
         run: npm install
       - name: Run unit tests
