--- a/stackhawk.yml
+++ b/stackhawk.yml
@@ -1,17 +1,20 @@
+# -- stackhawk configuration for  --
 app:
-  applicationId: ${{ secrets.HAWK_APP_ID }}
-  env: Development
-  host: http://localhost:3000
-  #see below for scanner retry behavior(optional); this allows the application to fully deploy before the scan starts
-  #see https://docs.stackhawk.com/hawkscan/configuration/#appwaitforapptarget
-  waitForAppTarget:
-    path: /
-    pollDelay: 1000
-    waitTimeoutMillis: 300000
-#Tag scans with branch and commit info(optional)
-#CircleCI example below; see https://docs.stackhawk.com/workflow-integrations/github-app/github-pr-checks.html for others
-tags:
-  - name: _STACKHAWK_GIT_COMMIT_SHA
-    value: ${CIRCLE_SHA1}
-  - name: _STACKHAWK_GIT_BRANCH
-    value: ${CIRCLE_BRANCH}
+  # -- An applicationId obtained from the StackHawk platform. --
+  applicationId: 9054fab5-5098-48dd-b318-b163dcd904a6 # (required)
+  # -- The environment for the applicationId defined in the StackHawk platform. --
+  env: Development # (required)
+  # -- The url of your application to scan --
+  host: http://localhost:3000 # (required)
+
+
+# -- Customized Configuration for GraphQL/SOAP/OpenAPI, add here --
+  # Configuration Docs: https://docs.stackhawk.com/hawkscan/configuration/
+
+# -- If Authenticated Scanning is needed, add here --
+  # Authenticated Scanning Docs: https://docs.stackhawk.com/hawkscan/authenticated-scanning.html
+  # Authenticated Scanning Repo: https://github.com/kaakaww/scan-configuration/tree/main/Authentication
+
+# -- Help Section --
+  # Docs: https://docs.stackhawk.com/
+  # Contact Support: support@stackhawk.com
