--- a/stackhawk.yml
+++ b/stackhawk.yml
@@ -6,6 +6,8 @@ app:
   env: Development # (required)
   # -- The url of your application to scan --
   host: http://localhost:3000 # (required)
+  hawk:
+  failureThreshold: high
 
 
 # -- Customized Configuration for GraphQL/SOAP/OpenAPI, add here --
