--- a/stackhawk.yml
+++ b/stackhawk.yml
@@ -6,8 +6,10 @@ app:
   env: Development # (required)
   # -- The url of your application to scan --
   host: http://localhost:3000 # (required)
-  hawk:
-    failureThreshold: High
+  
+# -- To make the HawkScan break your build for high severity alerts -- 
+#  hawk:
+#    failureThreshold: High
 
 
 # -- Customized Configuration for GraphQL/SOAP/OpenAPI, add here --
